@@ -4,6 +4,7 @@ Version 0.1.27     unreleased
 	* Add .python-version in preferred order to support pyenv.
 	* Add Sphinx configuration path to .readthedocs.yml.
 	* Adjust GHA build process to allow builds for stacked PRs.
+	* Add a new `run clean` target to clean up generated data.
 	* Update the jinja2 transitive dependency to address CVE-2025-27516.
 	* Update the requests transitive dependency to address CVE-2024-47081.
 	* Update the urllib3 transitive dependency to address CVE-2025-50181.
